--- a/include/footer.html
+++ b/include/footer.html
@@ -35,7 +35,7 @@
                   </ul>
                 </div>
                 <div class="f-info">
-                  <a href="" class="f_logo">
+                  <a href="index.html" class="f_logo">
                     <img src="../images/main/f_logo.png" alt="" />
                   </a>
                   <div class="menu_li">
@@ -63,7 +63,7 @@
             </div>
             <div class="dis-no vis-700">
               <div class="f-info">
-                <a href="" class="f_logo">
+                <a href="index.html" class="f_logo">
                   <img src="../images/main/f_logo.png" alt="" />
                 </a>
                 <div class="menu_li m_menu_li">
