--- a/include/header.html
+++ b/include/header.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/animations.css" />
     <link rel="stylesheet" href="../css/swiper-bundle.css" />
+    <link rel="stylesheet" href="../css/animations.css" />
     <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/sub-contents.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
     <script src="../js/jquery-3.6.1.min.js"></script>
     <script src="../js/swiper-bundle.min.js"></script>
     <script src="../js/jquery.waypoints.min.js"></script>
@@ -30,22 +31,22 @@
         <div class="gnb_inner">
           <div class="info left">
             <!-- <a href="../images/main/2-2.jpg" class="logo_1" download="2-2.jpg"> -->
-            <a href="home.html">
+            <a href="index.html">
               <img src="../images/layout/h_logo.png" alt="" />
             </a>
           </div>
           <nav class="menu center">
             <ul class="">
               <li class="menudepth">
-                <a href="introduce.html" class="menuitem">바스</a>
+                <a href="brand.html" class="menuitem">바스</a>
                 <div class="submenu_wrap">
                   <div class="submenu_box">
                     <ul class="submenu_list">
                       <li class="sub_tit">
                         <ul class="">
-                          <li class="main_tit"><a href="">브랜드</a></li>
-                          <li class=""><a href="">대림바스 </a></li>
-                          <li class=""><a href="">FÜLEN </a></li>
+                          <li class="main_tit"><a href="brand.html">브랜드</a></li>
+                          <li class=""><a href="brand.html">대림바스 </a></li>
+                          <li class=""><a href="brand.html">FÜLEN </a></li>
                         </ul>
                       </li>
                       <li class="sub_tit">
@@ -284,9 +285,124 @@
           </div>
         </div>
       </div>
+      <div class="ham-menu">
+        <div class="ham-back"></div>
+        <div class="m-ham">
+          <div class="close-btn">
+            <img src="../images/layout/mo_ham_x.png" alt="close button">
+          </div>
+          <div class="h-wrap">
+            <div class="h-inner">
+              <div class="h-util">
+                <span class="tit_txt">로그인 해주세요</span>
+                <div class="member-btn">
+                  <a href=""><span class="my-page">마이페이지</span></a>
+                  <a href=""><span class="eng">EN</span></a>
+                </div>
+                <div class="login-btn">
+                  <a href="">로그인</a>
+                </div>
+              </div>
+              <div class="h-menuwrap">
+                <div class="h-mainmenu">
+                  <ul class="h-menulist">
+                    <li class="depth01"><a href="" class="depth01_link">회사소개</a></li>
+                    <li class="depth01">
+                      <span class="depth01_tit">바스</span>
+                      <ul>
+                        <li class="depth02"><a href="">대림바스</a></li>
+                        <li class="depth02"><a href="">FÜLEN</a></li>
+                        <li class="depth02"><a href="">자동물내림 일체형비데</a></li>
+                        <li class="depth02"><a href="">위생도기 기술력</a></li>
+                        <li class="depth02"><a href="">수전 기술력</a></li>
+                        <li class="depth02"><a href="">랜드마크</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">리모델링</span>
+                      <ul>
+                        <li class="depth02"><a href="">대림바스&키친</a></li>
+                        <li class="depth02"><a href="">욕실 리모델링</a></li>
+                        <li class="depth02"><a href="">주방 리모델링</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">렌탈/케어서비스</span>
+                      <ul>
+                        <li class="depth02"><a href="">대림케어</a></li>
+                        <li class="depth02"><a href="">렌탈 서비스</a></li>
+                        <li class="depth02"><a href="">스마트 욕실케어</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">제품</span>
+                      <ul>
+                        <li class="depth02"><a href="|">바스</a></li>
+                        <li class="depth02"><a href="|">리모델링</a></li>
+                        <li class="depth02"><a href="|">렌탈/케어서비스</a></li>
+                        <li class="depth02"><a href="|">신제품</a></li>
+                        <li class="depth02"><a href="|">일체형 비데</a></li>
+                        <li class="depth02"><a href="|">비데/시트</a></li>
+                        <li class="depth02"><a href="|">양변기</a></li>
+                        <li class="depth02"><a href="|">소변기</a></li>
+                        <li class="depth02"><a href="|">세면기</a></li>
+                        <li class="depth02"><a href="|">수전금구</a></li>
+                        <li class="depth02"><a href="|">액세서리</a></li>
+                        <li class="depth02"><a href="|">욕실가구</a></li>
+                        <li class="depth02"><a href="|">부속/부자재</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">대리점/전시장</span>
+                      <ul>
+                        <li class="depth02"><a href="">대리점</a></li>
+                        <li class="depth02"><a href="">전시장</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">자료실</span>
+                      <ul>
+                        <li class="depth02"><a href="">카탈로그</a></li>
+                        <li class="depth02"><a href="">제품 정보 다운로드</a></li>
+                        <li class="depth02"><a href="">인증서/등록증</a></li>
+                        <li class="depth02"><a href="">브로슈어/리플렛</a></li>
+                        <li class="depth02"><a href="">시공수첩/기타</a></li>
+                        <li class="depth02"><a href="">AS/설치가이드</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">AS/문의</span>
+                      <ul>
+                        <li class="depth02"><a href="">1:1 문의</a></li>
+                        <li class="depth02"><a href="">사업제안</a></li>
+                      </ul>
+                    </li>
+                    <li class="depth01">
+                      <span class="depth01_tit">홍보센터</span>
+                      <ul>
+                        <li class="depth02"><a href="">공지사항</a></li>
+                        <li class="depth02"><a href="">IR</a></li>
+                        <li class="depth02"><a href="">SNS</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <div class="h-sns">
+                  <ul>
+                    <li><a href=""><img src="../images/layout/mo_b.png" alt=""></a></li>
+                    <li><a href=""><img src="../images/layout/mo_f.png" alt=""></a></li>
+                    <li><a href=""><img src="../images/layout/mo_i.png" alt=""></a></li>
+                    <li><a href=""><img src="../images/layout/mo_y.png" alt=""></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="site-container">
         <div class="close-btn">
-          <img src="../images/main/factory_close.png" alt="">
+          <img src="../images/main/factory_close.png" alt="close button">
         </div>
         <div class="site-inner">
           <div class="site-wrap">
@@ -297,9 +413,9 @@
                   <div class="site-area">
                     <ul>
                       <li>
-                        <div class="main_tit"><a href="">브랜드</a></div>
-                        <div class="sub_tit"><a href="">대림바스</a></div>
-                        <div class="sub_tit"><a href="">FÜLEN</a></div>
+                        <div class="main_tit"><a href="brand.html">브랜드</a></div>
+                        <div class="sub_tit"><a href="brand.html">대림바스</a></div>
+                        <div class="sub_tit"><a href="brand.html">FÜLEN</a></div>
                       </li>
                     </ul>
                     <ul>
