--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -17,6 +17,10 @@
 body {
   font-family: "Exo 2", "Noto Sans KR", sans-serif;
   line-height: 1.6;
+  &.overflow {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
 a,
 a:hover {
@@ -274,6 +278,166 @@ header {
       left: 0;
       width: 100%;
       border-bottom: 1px solid rgba(13, 13, 13, 0.05);
+    }
+  }
+  .ham-menu {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    // display: block;
+    display: none;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    &.act {
+      display: block;
+    }
+    .ham-back {
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      opacity: 0.7;
+      background-color: #000;
+      top: 0;
+      left: 0;
+    }
+    .m-ham {
+      // position: relative;
+      position: absolute;
+      width: 311px;
+      height: 100vh;
+      background: #fff;
+      right: 0;
+    }
+    .close-btn {
+      position: absolute;
+      left: -28px;
+      top: 22px;
+      width: 18px;
+      height: 17px;
+      cursor: pointer;
+      z-index: 99;
+    }
+    .h-util {
+      position: relative;
+      height: 105px;
+      background-color: #326aff;
+      padding: 0 27px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      .tit_txt {
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+      }
+      .member-btn {
+        display: inline-block;
+        margin-top: 10px;
+        span {
+          color: #fff;
+          display: inline-block;
+          border-bottom: 2px solid #fff;
+          font-size: 13px;
+        }
+        .eng {
+          margin-left: 10px;
+          border-bottom: 0;
+          font-family: "Noto Sans KR", san-serif;
+        }
+      }
+    }
+    .login-btn {
+      position: absolute;
+      right: 16px;
+      top: 27px;
+      background: #fff;
+      border-radius: 12.5px;
+      height: 25px;
+      line-height: 25px;
+      color: #000;
+      font-size: 10px;
+      padding: 0 9px;
+      font-weight: 500;
+    }
+    .h-menuwrap {
+      height: calc(100vh - 105px);
+      .h-mainmenu {
+        padding: 36px 27px 54px;
+      }
+      .h-menulist {
+        .depth01 {
+          position: relative;
+          margin-bottom: 30px;
+          cursor: pointer;
+          .depth01_link,
+          .depth01_tit {
+            font-size: 21px;
+            font-weight: 500;
+            color: #000;
+            line-height: 1;
+            display: block;
+          }
+          .depth01_tit {
+            display: block;
+            background: {
+              image: url("../images/layout/ham_arr_dw.png");
+              repeat: no-repeat;
+              position: right;
+              size: 11px;
+            }
+            transition: 0.4s;
+            &.act {
+              color: #326aff;
+              background: {
+                image: url("../images/layout/ham_arr_up.png");
+                repeat: no-repeat;
+                position: right;
+                size: 11px;
+              }
+            }
+          }
+        }
+        ul {
+          padding-top: 7px;
+          margin-top: 7px;
+          border-top: 1px solid rgba(0, 0, 0, 0.1);
+          display: none;
+          transition: all cubic-bezier(0.79, 0, 0.83, 0.67);
+          // &.act {
+          //   display: block;
+          // }
+        }
+        .depth02 {
+          padding: 7px 0;
+          line-height: 1;
+          a {
+            font-size: 15px;
+            font-weight: normal;
+            line-height: 1;
+            color: rgba(0, 0, 0, 0.75);
+          }
+        }
+      }
+    }
+    .h-sns {
+      position: relative;
+      padding: 0 27px 55px;
+      ul {
+        display: flex;
+        li {
+          margin-right: 14px;
+          &:first-child {
+            margin-right: 0px;
+          }
+          &:nth-child(2) {
+            margin-right: 20px;
+          }
+          img {
+            width: 50%;
+          }
+        }
+      }
     }
   }
   .site-container {
@@ -598,7 +762,6 @@ header {
     }
   }
 }
-
 @media all and (max-width: 1440px) {
   header {
     .gnb {
@@ -731,7 +894,6 @@ header {
     }
   }
 }
-
 @media all and (max-width: 768px) {
   // 여기다가 640px보다 작아졌을때 어떤 css 쓸건지 적용
   header {
@@ -827,6 +989,34 @@ header {
     }
     .f-bt {
       font-size: 12px;
+    }
+  }
+}
+@media all and (max-width: 545px) {
+  header .ham-menu {
+    .login-btn {
+      top: 19px;
+    }
+    .h-util {
+      height: 85px;
+      .tit_txt {
+        font-size: 16px;
+      }
+    }
+    .h-menuwrap {
+      height: calc(100vh - 85px);
+      .h-mainmenu {
+        padding: 15px 20px 20px;
+      }
+      .h-menulist {
+        .depth01 {
+          margin-bottom: 20px;
+          .depth01_link,
+          .depth01_tit {
+            font-size: 15px;
+          }
+        }
+      }
     }
   }
 }
