--- a/scss/main.scss
+++ b/scss/main.scss
@@ -186,12 +186,6 @@ body {
       color: rgb(125, 125, 125);
       letter-spacing: -0.54px;
     }
-  }
-  .contents-wrap {
-    position: relative;
-    margin-top: 47px;
-    text-align: center;
-    overflow: hidden;
     .cont-img {
       font-size: 0;
       > li {
@@ -213,7 +207,7 @@ body {
             .top_txt {
               position: relative;
               display: inline-block;
-              font-size: 20px;
+              font-size: 22px;
               font-weight: 600;
               line-height: 1;
               color: rgb(255, 255, 255);
@@ -293,7 +287,15 @@ body {
         }
       }
     }
-    // }
+    .cont-txt {
+      word-break: keep-all;
+    }
+  }
+  .contents-wrap {
+    position: relative;
+    margin-top: 47px;
+    text-align: center;
+    // overflow: hidden;
   }
   #section03 {
     overflow: hidden;
@@ -1355,512 +1357,6 @@ body {
             margin-right: 0;
           }
         }
-      }
-    }
-  }
-}
-
-@media all and (max-width: 1680px) {
-  #wrap {
-    #section04 {
-      .fix .sec-cat {
-        width: 40%;
-      }
-    }
-  }
-}
-@media all and (max-width: 1440px) {
-  #wrap {
-    #section03 {
-      .contents-wrap .cont-txt .line_wrap li {
-        width: 16%;
-        &:before {
-          padding: 0;
-          height: 220px;
-          width: 180px;
-          bottom: -70px;
-        }
-        .main_tit {
-          font-size: 14px;
-        }
-      }
-    }
-    #section05 {
-      .txt_ban {
-        font-size: 180px;
-      }
-    }
-    #section06 {
-      .slidebx .media_list li {
-        .main_tit {
-          // display: block;
-          font-size: 24px;
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 1280px) {
-  // 여기다가 1280보다 작아졌을때 어떤 css 쓸건지 적용
-  #wrap {
-    #section01 {
-      .swiper-slide .slide-contents {
-        top: 35%;
-      }
-      .txt-wrap {
-        .main_tit {
-          margin: 10px 0 28px;
-          font-size: clamp(34px, 4vw, 50px);
-        }
-        .main_cont {
-          font-size: 15px;
-        }
-      }
-      .slide-nav {
-        bottom: 45px;
-        li {
-          width: 374px;
-          .main_tit {
-            font-size: clamp(12px, 1.2vw, 16px);
-          }
-        }
-      }
-    }
-    #section02,
-    .section045,
-    #section05,
-    #section06 {
-      .txt_cont {
-        .main_tit {
-          font-size: clamp(33px, 4vw, 48px);
-          margin: clamp(15px, 3vw, 47px) 0 10px;
-        }
-        .desc {
-          font-size: 15px;
-        }
-      }
-    }
-    #section03 {
-      .txt_cont {
-        .main_tit {
-          font-size: clamp(33px, 4vw, 48px);
-          margin: clamp(15px, 3vw, 47px) 0 10px;
-        }
-      }
-    }
-  }
-}
-
-@media all and (max-width: 1100px) {
-  #wrap {
-    #section01 {
-      .slide-nav {
-        li {
-          margin-right: 20px;
-        }
-        li:not(.on) {
-          width: 50px;
-          span {
-            display: none;
-          }
-        }
-      }
-    }
-    #section03 {
-      .contents-wrap .cont-txt .line_wrap li {
-        &:before {
-          width: 150px;
-        }
-      }
-    }
-    #section06 {
-      .slidebx .media_list li {
-        height: 450px;
-        width: 30%;
-        // padding: 25.8%;
-        // height: 0;
-        .main_tit {
-          display: block;
-          font-size: 18px;
-          margin: 0;
-        }
-        &.on .main_tit {
-          font-size: 24px;
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 1024px) {
-  #wrap {
-    #section02 {
-      .contents-wrap {
-        .cont-img {
-          > li {
-            width: 23.73%;
-            .cont-txt {
-              padding: 20px 23px 30px;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 989px) {
-  // 여기다가 960px보다 작아졌을때 어떤 css 쓸건지 적용
-  // .contents-box {
-  //   padding: clamp(30px, 100/980 * 100vw, 100px) 0;
-  //   .banner {
-  //     margin-top: clamp(30px, 100/980 * 100vw, 100px);
-  //   }
-  // }
-  .dis-900 {
-    display: none !important;
-  }
-  .dis-no.vis-900 {
-    display: block !important;
-  }
-  #wrap {
-    #section01 {
-      .slide-nav {
-        li .sub_tit {
-          font-size: 12px;
-        }
-      }
-    }
-    #section02 {
-      .page.bath-slide {
-        padding-left: 0;
-        width: 100%;
-      }
-      .swiper-button-prev {
-        width: 20px;
-        height: 32px;
-        top: 50%;
-        left: 35px;
-        transform: translateY(-50%);
-        background: {
-          image: url("../images/main/slide_prev_w.png");
-          repeat: no-repeat;
-          position: center;
-        }
-        &:after {
-          content: none;
-        }
-      }
-      .swiper-button-next {
-        width: 20px;
-        height: 32px;
-        top: 50%;
-        right: 15px;
-        transform: translateY(-50%);
-        background: {
-          image: url("../images/main/slide_next_w.png");
-          repeat: no-repeat;
-          position: center;
-        }
-        &:after {
-          content: none;
-        }
-      }
-      .contents-wrap {
-        padding-left: 17px;
-        margin-top: 24px;
-        overflow: hidden;
-        .cont-img {
-          overflow: visible;
-          .swiper-slide-active .cont-txt .bot_txt {
-            opacity: 1;
-          }
-          > li {
-            margin-right: 0;
-            &:hover {
-              transform: none;
-              box-shadow: none;
-              .top_txt {
-                font-size: 14px;
-              }
-            }
-            a .cont-txt {
-              .top_txt {
-                font-size: 14px;
-                &::before {
-                  opacity: 1;
-                }
-              }
-              .bot_txt {
-                font-size: 20px;
-                bottom: auto;
-                top: 44px;
-              }
-            }
-          }
-        }
-      }
-    }
-    #section03 {
-      .txt_cont .main_tit {
-        margin: 27px 0 29px;
-      }
-      .m_slide .btn-box .btn-view {
-        height: 47px;
-        line-height: 45px;
-        width: 150px;
-        &:hover .btn-title {
-        }
-        .btn-title {
-          background: {
-            position: 88%;
-          }
-          font-size: 12px;
-          letter-spacing: 0.85px;
-          line-height: 45px;
-        }
-      }
-    }
-    .m_section04 {
-      .page {
-        .smlet_ul {
-          width: 60%;
-          li {
-            width: 50%;
-            a > img {
-              border-radius: 30px;
-            }
-          }
-        }
-        .smlet_box {
-          padding-left: 10px;
-          position: relative;
-          display: flex;
-          flex-direction: column;
-        }
-        .main_tit {
-          padding: 9px 0 12px;
-          font-size: 17px;
-          font-weight: 600;
-        }
-        .smlet_hash ul {
-          padding-bottom: 20px;
-          li {
-            text-align: center;
-            font-size: 10px;
-            padding: 0 8px;
-            height: 25px;
-            line-height: 23px;
-            width: 100%;
-            // margin-bottom: 0;
-            white-space: nowrap;
-            overflow: hidden;
-          }
-        }
-      }
-    }
-    #section05 {
-      padding-top: 30px;
-      .txt {
-        margin-bottom: 30px;
-      }
-      .txt_ban {
-        font-size: 130px;
-        letter-spacing: -5px;
-      }
-      .sec_tit .btn-view {
-        width: 180px;
-        height: 47px;
-        line-height: 45px;
-        // width: 150px;
-        background: #326aff;
-        .btn-title {
-          background: {
-            image: url("../images/main/more_plus.png");
-            repeat: no-repeat;
-            position: 88%;
-            size: 12px;
-          }
-          padding: 0 25px;
-          font-size: 12px;
-          letter-spacing: 0.85px;
-          line-height: 45px;
-          color: #fff;
-        }
-      }
-      .m_section05 {
-        .btn-box .btn-view {
-          height: 47px;
-          line-height: 45px;
-          width: 150px;
-          &:hover .btn-title {
-            background: {
-              position: 90%;
-            }
-          }
-          .btn-title {
-            background: {
-              position: 88%;
-            }
-            padding: 0 25px;
-            font-size: 12px;
-            letter-spacing: 0.85px;
-            line-height: 45px;
-          }
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 860px) {
-  #wrap {
-    #section03 {
-      .txt_wrap > span.main_cont br {
-        display: none;
-      }
-      .m_slide {
-        ul {
-          max-width: 360px;
-          width: 100%;
-          margin: 0 auto;
-          li {
-            padding: 0;
-            margin-bottom: 9px;
-            font-size: 14px;
-            width: 130px !important;
-          }
-        }
-        .txt_wrap .main_cont {
-          font-size: 13px;
-          padding: 0 20px;
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 767px) {
-  // 여기다가 640px보다 작아졌을때 어떤 css 쓸건지 적용
-  .dis-700 {
-    display: none !important;
-  }
-  .dis-no.vis-700 {
-    display: block !important;
-  }
-  #wrap {
-    #section02,
-    #section03,
-    .section045,
-    #section05,
-    #section06 {
-      .sub_tit {
-        font-size: 12px;
-      }
-    }
-    #section01 {
-      .swiper-slide > img {
-        width: 101%;
-      }
-      .txt-wrap {
-        .main_tit {
-          line-height: 1.2;
-          letter-spacing: -2.08px;
-        }
-        // .sub_tit {
-        //   font-size: 12px;
-        // }
-      }
-      .slide-nav {
-        li {
-          margin-right: 10px;
-        }
-        li:not(.on) {
-          width: 25px;
-          span {
-            display: none;
-          }
-        }
-      }
-    }
-    #section02 {
-      .page {
-        padding: 0 15px;
-      }
-    }
-    .m_section04 {
-      .mobg-top {
-        max-width: 400px;
-        .desc {
-          font-size: 15px;
-        }
-      }
-      .page {
-        padding: 0 15px;
-        justify-content: flex-start;
-        .smlet_ul {
-          width: auto;
-          > li {
-            display: flex;
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 0;
-            a {
-              width: 26.25%;
-              img {
-                border-radius: 10px;
-              }
-            }
-            .main_tit {
-              font-size: 17px;
-              padding: 9px 0 12px;
-            }
-          }
-        }
-        .smlet_box {
-          width: 73.75%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          padding-left: 15px;
-        }
-        .smlet_hash ul {
-          padding-bottom: 10px;
-        }
-      }
-    }
-    #section05 {
-      .txt_ban {
-        font-size: 90px;
-      }
-    }
-    #section06 {
-      .txt_cont {
-        text-align: left;
-        padding-left: 15px;
-      }
-      .page {
-        padding-left: 0;
-        padding-right: 0;
-        > div {
-          overflow: hidden;
-        }
-      }
-      .slidebx .media_list li {
-        padding: 25.8%;
-        height: 0;
-        .sub_tit {
-          font-size: 10px;
-        }
-        .main_tit {
-          font-size: 14px;
-        }
-      }
-    }
-  }
-}
-@media all and (max-width: 500px) {
-  #wrap {
-    #section05 {
-      .txt_ban {
-        font-size: 50px;
-        letter-spacing: -2px;
       }
     }
   }
