--- a/css/sub-contents.css
+++ b/css/sub-contents.css
@@ -21,17 +21,84 @@
   line-height: 1.35;
   padding: 22px 0 38px;
 }
+.introduce .section07 {
+  padding-bottom: 279px;
+  text-align: center;
+}
+.introduce .m_section07 {
+  background-image: url("../images/brand/about_mo05.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  margin-top: 20px;
+  padding: 85px 0 50px;
+}
+.introduce .m_section07 .txt_wrap {
+  padding-top: 74px;
+  padding-bottom: 119px;
+}
+.introduce .m_section07 .bath_img {
+  position: relative;
+}
+.introduce .m_section07 .bath_img .m_bath01 {
+  position: absolute;
+  top: -39px;
+  left: 132px;
+  z-index: 3;
+  width: 107px;
+}
+.introduce .m_section07 .bath_img .m_bath02 {
+  width: 173px;
+}
+.introduce .m_section07 .bath_img.bot {
+  text-align: right;
+  padding-right: 44px;
+}
+.introduce .m_section07 .bath_img.bot .m_bath03 {
+  width: 107px;
+  position: absolute;
+  bottom: 113px;
+  right: 0;
+  z-index: 3;
+}
+.introduce .m_section07 .bath_img.bot .m_bath04 {
+  width: 199px;
+}
+.introduce .m_section07 .tit_txt .d_idx {
+  position: relative;
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+  display: inline-block;
+  padding-left: 168px;
+}
+.introduce .m_section07 .tit_txt .d_idx:before {
+  position: absolute;
+  content: "";
+  height: 1px;
+  width: 128px;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #fff;
+}
+.introduce .m_section07 .txt_main {
+  padding-bottom: 0;
+}
 
 .product .section01 {
   position: relative;
   z-index: 99;
+  overflow: hidden;
 }
 .product .section01 .txt_wrap {
   padding-bottom: 94px;
   text-align: left;
+  transition: all 1.5s cubic-bezier(0, 0.72, 0.44, 0.99);
 }
 .product .section01 .txt_wrap .main_txt {
   line-height: 1.3;
+  transition: all 1.5s cubic-bezier(0, 0.72, 0.44, 0.99);
 }
 .product .section01 .txt_wrap .sub_txt {
   font-size: 22px;
@@ -55,10 +122,6 @@
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(13, 13, 13, 0.5);
-}
-.product .section07 {
-  padding-bottom: 279px;
-  text-align: center;
 }
 
 .sub_page {
@@ -118,6 +181,9 @@
   background-image: url("../images/brand/about_bg.png");
   background-repeat: no-repeat;
   background-position: center;
+}
+.brand .section02 .since {
+  color: rgba(0, 0, 0, 0.7);
 }
 .brand .section02 .sub_page {
   display: flex;
@@ -184,10 +250,10 @@
   gap: 130px;
   flex-wrap: nowrap;
 }
-.brand .section03 .cont_box .cont_txt ul li {
+.brand .section03 .cont_box .cont_txt li {
   position: relative;
 }
-.brand .section03 .cont_box .cont_txt ul li:after {
+.brand .section03 .cont_box .cont_txt li:after {
   position: absolute;
   content: "";
   display: block;
@@ -198,7 +264,7 @@
   height: 82%;
   background-color: rgba(32, 157, 203, 0.2);
 }
-.brand .section03 .cont_box .cont_txt ul li:last-child:after {
+.brand .section03 .cont_box .cont_txt li:last-child:after {
   display: none;
 }
 .brand .section03 .cont_box .cont_txt .txt_ch {
@@ -422,4 +488,10 @@
   transition: 0.8s;
   z-index: -5;
   bottom: 36px;
+}
+
+.m_section07 .inner_page {
+  max-width: 390px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
